	-> button in 'Layout' tab that moves subshapes to parent shapes according to geometrical overlap
	-> do not check for local autosaves by default; introduce additional save dropdown where autosaves can be loaded explicitly
	-> show history of finished server exports not older than 2 weeks in export dialog
	-> bugfix: merging baselines (issue TranskribusSwtGui#21)
	-> align shapes in canvas according to text alignment (enable via transcription widget toolbar)
	-> HTR CER chart: tick-units fixed on y-axis, annotation for stored HTR, minor changes
	-> crowdProject management
	
1.3.4:
	-> fix NullpointerException in TrpMessageDialog	
	
1.3.5:
	-> normalizing tag attributes available again
	-> TrpDocUploadHttp: no file size limits, resumable uploads
	-> import local docs with text files only (in txt subfolder, one text file for each image, dummy lines with size of image are created for each line)
	-> CommonExportDialog: allow to choose image quality (original | JPEG)
	-> HtrTrainingDialog: fix bugs in selection of base model
	-> IO stuff: broken image files can now be handled (local/remote docs)
	-> fix high resolution issue
	-> fix PDF import bug
	
1.3.6:
	-> fix Abbyy XML import bug
	-> Export: fix version chooser
	-> show correct error message when a job can't be started from tools tab
	-> Fix a bug that blocked the HTR config. dialog when a non-existent HTR is selected
	-> KWS
	-> new default parameters for HTR training
	-> CITlab Advanced LA is now the default selection

1.3.7:
	-> fix NPE in Text2Image
	-> add "value" column in tag search&replace

1.3.8:
	-> add BIDI support in transcription widget
	-> adapted PDF export
	-> adapted tag search and replace
	-> simple txt export
	-> export images without loading transcripts
	-> Transcripts: Revert to the version(s) before the last (batch) job was completed
	-> add What is new in Transkribus (make CHANGES.txt visible to the user)
	-> add search for documents by collection ID
	