@@ -533,4 +533,5 @@ CHANGES AND BUGFIXES
 	-> Transcripts: Revert to the version(s) before the last (batch) job was completed
 	-> add What is new in Transkribus (make CHANGES.txt visible to the user)
 	-> add search for documents by collection ID
+	-> simplify load from pdf dialog, user's tmp directory is now used
 	
